--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "npx nodemon",
     "dev:client": "cd ../client && npm run dev",
-    "start": "npm run build && node server.js",
+    "start": "npm run build && node build/server.js",
     "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "fastify": "^4.24.3",
     "mongoose": "^7.6.3"
   },
