--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "fastify": "^4.24.3",
     "mongoose": "^7.6.3"
