--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "install:all": "npm install && cd ../client && npm install",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "npx nodemon",
-    "dev:client": "cd ../client && npm run dev",
+    "dev:client": "cd ../client && npm run dev -- --open",
     "start": "npm run build && node build/server.js",
     "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
