--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/jquery": "^3.5.25",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
@@ -26,6 +27,8 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-dark-mode": "^2.1.0",
+		"svelte-headless-table": "^0.17.7",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -34,6 +37,7 @@
 	"type": "module",
 	"dependencies": {
 		"@inqling/svelte-icons": "^4.0.2",
+		"jquery": "^3.7.1",
 		"preline": "^1.9.0"
 	}
 }
