--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "build/server.js",
   "scripts": {
     "install:all": "npm install && cd ../client && npm install",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client-open\"",
     "dev:server": "npx nodemon",
     "dev:client": "cd ../client && npm run dev",
     "dev:client-open": "cd ../client && npm run dev -- --open",
