--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.4.0",
+    "@fastify/multipart": "^8.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "fastify": "^4.24.3",
     "mongoose": "^7.6.3"
