--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "@fastify/multipart": "^8.0.0",
+    "@fastify/static": "^6.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
