--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/server.js",
   "scripts": {
-    "install:all": "npm install && cd ../client && npm install",
+    "install:all": "npm install && cd ../client && npm install --f",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client-open\"",
     "dev:server": "npx nodemon",
     "dev:client": "cd ../client && npm run dev",
